--- a/utility.css
+++ b/utility.css
@@ -74,3 +74,20 @@ width: 50%;
 .width-100{
 width: 100%;
 }
+
+@media (max-width: 991px){
+h1{
+        font-size: 32px ;
+        line-height: 42px;
+
+    }
+}
+
+@media (max-width: 768px){
+    h1{
+        font-size: 26px;
+    }
+     .width-50{
+    width: 100%;
+   }
+}
